fix: double scrollbar

--- a/src/renderer/globals.css
+++ b/src/renderer/globals.css
@@ -242,11 +242,13 @@
     font-feature-settings: "cv02", "cv03", "cv04", "cv11";
     font-variation-settings: normal;
     scroll-behavior: smooth;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-tap-highlight-color: transparent;
   }
+
 
   body {
     background-color: var(--bg);
